[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cover-posterizer"
version = "0.1.0"
description = "Build cover-art posters and upload text from CBR/CBZ comic packs."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Maxikozie" },
]
dependencies = [
    "Pillow>=10.0",
    "rarfile>=4.0",
]

[project.urls]
Homepage = "https://github.com/Maxikozie/cover-posterizer"
Repository = "https://github.com/Maxikozie/cover-posterizer"

[project.scripts]
cover-posterizer = "poster:main"

[tool.setuptools]
py-modules = ["poster"]
